fixed alignments and bug on invoice number not adding

--- a/client/cart/cart_styles.css
+++ b/client/cart/cart_styles.css
@@ -11,7 +11,6 @@ body {
   background-color: #f6f6f6;
 }
 
-
 p {
   text-transform: capitalize;
 }
@@ -372,7 +371,7 @@ input::-webkit-inner-spin-button {
   margin-left: 89%;
 }
 .bxs-x-circle:active {
-  color: #513E5C;
+  color: #513e5c;
   transform: scale(0.95);
 }
 
@@ -382,7 +381,7 @@ input::-webkit-inner-spin-button {
   background-color: #fff;
   border-radius: 15px;
   margin-left: 50px;
-  box-shadow: 0 0 5px #513E5C;
+  box-shadow: 0 0 5px #513e5c;
   display: flex;
   flex-direction: column;
   padding-bottom: 15px;
@@ -393,20 +392,19 @@ input::-webkit-inner-spin-button {
   margin-right: auto;
   width: 89%;
   height: 70%;
-  background-color: #513E5C;
+  background-color: #513e5c;
   border-radius: 14px;
   text-align: center;
   color: white;
   padding: 8px 10px 8px 10px;
 }
 
-
 .grandtotal-container {
   display: flex;
   flex-direction: row;
 }
 .grand-total {
-  background-color: #513E5C;
+  background-color: #513e5c;
   margin-top: 2px;
   margin-left: 40px;
   padding-top: 10px;
@@ -435,14 +433,11 @@ input::-webkit-inner-spin-button {
   font-weight: bold;
 }
 
-
 .check-out:hover {
   background-color: #c7aabc;
   font-size: 18px;
   text-align: center;
-
 }
-
 
 .total {
   color: white;
@@ -450,3 +445,8 @@ input::-webkit-inner-spin-button {
   text-align: center;
 }
 
+#null_item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
